incremento variabile x, creazione main.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nome Cognome p5</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js" integrity="sha512-lvddmeF7aHRJwdbJeYThWd5kWSjTrXBzCRF/jYROiHzmhMJ1dEXfGH5Q7ft0yhizXTopAETG03s5ajTflauijA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body> 
     <h1>Titolo h1</h1>
@@ -13,9 +14,9 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum neque molestias voluptates reiciendis fugit ab rerum non quis quia a beatae sunt impedit, animi distinctio? Commodi amet veritatis blanditiis mollitia.</p>
 
-    <script>
-            console.log("ciao a tutt*");
-    </script>
+
+<script src="main.js"></script>
+
 
 </body>
 </html>
